services/gatekeeper-policy-manager/0.3.0/kustom.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
    kubernetes.io/ingress.class: kommander-traefik
    traefik.ingress.kubernetes.io/router.middlewares: ${releaseNamespace}-stripprefixes@kubernetescrd,${releaseNamespace}-forwardauth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: gpm-dashboard
  namespace: ${releaseNamespace}
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gatekeeper-policy-manager
            port:
              number: 80
        # GPM is not able to run as sub path: https://github.com/sighupio/gatekeeper-policy-manager/issues/452
        #path: /dkp/gatekeeper-policy-manager/dashboard
        path: /
        pathType: ImplementationSpecific
